# arduino-stuff

./: .gitignore  LICENSE  README.md
LCD/: crystal_ball.ino
arm-test/: main.cpp
blink/: CMakeLists.txt  Makefile  Makefile.bak  Makefile_bak  led.cpp
blink/src/: led.cpp
common/include/: arduino.h
crystal-ball/: Makefile
crystal-ball/includes/: lcd_hd44780.h
crystal-ball/src/: lcd_hd44780.cpp  main.cpp
crystal_ball/: CMakeLists.txt
crystal_ball/src/: crystal_ball.cpp
include/: arduino.h
